--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,23 @@
 			<version>1.2.16</version>
 		</dependency>
 
+
+		<!-- dom4j会用到这个 -->
+		<dependency>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		
+		
+		<!--json-lib -->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.1</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		
 	</dependencies>
 
 </project>
