8.在页面使用fmt标签实现国际化

--- a/src/main/java/com/z2w/common/resource/NavigatorRB.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB.properties
@@ -6,3 +6,16 @@ object.submenu.description=Sub Menu
 
 object.submenu2.title=Sub Menu 2
 object.submenu2.description=Sub Menu 2
+
+
+object.navigator.title=Navigator
+object.navigator.description=Navigator
+
+object.menu1.title=Menu 1
+object.menu1.description=Menu 1
+
+object.menu2.title=Menu 2
+object.menu2.description=Menu 2
+
+object.menu3.title=Menu 3
+object.menu3.description=Menu 3
