--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 		<!-- spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -77,8 +84,8 @@
 			<artifactId>jaxen</artifactId>
 			<version>1.1.1</version>
 		</dependency>
-		
-		
+
+
 		<!--json-lib -->
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
@@ -86,7 +93,7 @@
 			<version>2.1</version>
 			<classifier>jdk15</classifier>
 		</dependency>
-		
+
 	</dependencies>
 
 </project>
