--- a/src/main/java/com/z2w/action/resource/ActionRB.properties
+++ b/src/main/java/com/z2w/action/resource/ActionRB.properties
@@ -15,3 +15,6 @@ opt.subabc.description=test Sub ABC
 
 opt.subbbc.title=test Sub BBC
 opt.subbbc.description=test Sub BBC
+
+action.reload.title=Reload Actions
+action.reload.description=Reload action configurations
