--- a/src/main/java/com/z2w/common/resource/NavigatorRB.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB.properties
@@ -19,3 +19,9 @@ object.menu2.description=Menu 2
 
 object.menu3.title=Menu 3
 object.menu3.description=Menu 3
+
+object.system_config_actions.title=System Configuration
+object.system_config_actions.description=System Configuration
+
+system.systemTools.title=System Tools
+system.systemTools.description=System Tools
