更改了组织拼写错误。添加组织在导航器菜单

--- a/src/main/java/com/z2w/common/resource/NavigatorRB.properties
+++ b/src/main/java/com/z2w/common/resource/NavigatorRB.properties
@@ -11,14 +11,8 @@ object.submenu2.description=Sub Menu 2
 object.navigator.title=Navigator
 object.navigator.description=Navigator
 
-object.menu1.title=Menu 1
-object.menu1.description=Menu 1
-
-object.menu2.title=Menu 2
-object.menu2.description=Menu 2
-
-object.menu3.title=Menu 3
-object.menu3.description=Menu 3
+object.menu1.title=Menu Test
+object.menu1.description=Menu Test
 
 object.system_config_actions.title=System Configuration
 object.system_config_actions.description=System Configuration
@@ -28,3 +22,6 @@ system.systemTools.description=System Tools
 
 system.log4jMng.title=Log4j management
 system.log4jMng.description=Log4j management
+
+object.orgnazition.title=Orgnazition
+object.orgnazition.description=Orgnazition
