--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>1.0.0.RELEASE</version>
 		</dependency>
-		
+
 		<!-- hibernate-annotation -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -112,7 +112,7 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		
+
 		<!-- spring jdbc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -125,7 +125,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
 		</dependency>
-		
+
 		<!-- spring controller 返回json -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -134,7 +134,36 @@
 		</dependency>
 
 	</dependencies>
-	
+
+	<build>
+		<finalName>Zero2Web</finalName>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.0.2</version>
+
+				<configuration>
+					<webResources>
+						<resource>
+							<directory>src/main/webapp</directory>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+		</plugins>
+
+		<defaultGoal>compile</defaultGoal>
+	</build>
 
 </project>
 
