更新了db信息，演示系统信息一致，已经创建在演示系统本机有权限的同名账号

--- a/src/main/java/log4j.properties
+++ b/src/main/java/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, stdout,D, E
+log4j.rootLogger=WARN, stdout,D, E
 
 #console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
