更新一个action下拉菜单的实现

--- a/src/main/java/com/z2w/action/resource/ActionRB.properties
+++ b/src/main/java/com/z2w/action/resource/ActionRB.properties
@@ -1,8 +1,10 @@
 navigator.show.title=show sth
 navigator.show.description=show sth
+navigator.show.iconCls=icon-add
 
 navigator.test.title=test sth
 navigator.test.description=test sth
+navigator.test.iconCls=icon-add
 
 opt.abc.title=test abc
 opt.abc.description=test abc
@@ -15,6 +17,7 @@ opt.subabc.description=test Sub ABC
 
 opt.subbbc.title=test Sub BBC
 opt.subbbc.description=test Sub BBC
+opt.subbbc.iconCls=icon-cancel
 
 action.reload.title=Reload Actions
 action.reload.description=Reload action configurations
