基于action的infoPage页面初始提交

--- a/src/main/java/com/z2w/container/resource/Z2WOrganizationRB.properties
+++ b/src/main/java/com/z2w/container/resource/Z2WOrganizationRB.properties
@@ -1,5 +1,11 @@
-orgnazition.detail.title=View Details
-orgnazition.detail.description=View Organization Details
+organization.detail.title=View Details
+organization.detail.description=View Organization Details
 
-orgnazition.content.title=Contents
-orgnazition.content.description=View Organization Contents
+organization.content.title=Contents
+organization.content.description=View Organization Contents
+
+organization.detailTab.title=Details
+organization.detailTab.titdescriptionle=Details tab
+
+organization.contentTab.title=Content
+organization.contentTab.description=Content tab
